package nl.han.oopg.nukeit.Enums;

public enum GameState {
    START,
    GAME,
    END
}
