package nl.han.oopg.nukeit.Enums;

public enum PowerUp {
    RAPID,
    NORMAL,
    TRIPLE,
    LIFE,
    NUKEIT,
}
