package nl.han.oopg.nukeit;

public enum FireMode {
    NORMAL,
    RAPID,
    TRIPLE
}
