package nl.han.oopg.nukeit.Interfaces;

import nl.han.ica.oopg.collision.ICollidableWithGameObjects;
import nl.han.ica.oopg.objects.GameObject;

import java.util.List;

public abstract class Bullet implements ICollidableWithGameObjects {

}
