@startuml

title __NUKEITAPP's Class Diagram__\n

  namespace nl.han.oopg.nukeit.AbstractClasses {
    abstract class nl.han.oopg.nukeit.AbstractClasses.Bullet {
    }
  }
  

  namespace nl.han.oopg.nukeit.AbstractClasses {
    abstract class nl.han.oopg.nukeit.AbstractClasses.Enemy {
    }
  }
  

  namespace nl.han.oopg.nukeit.AbstractClasses {
    abstract class nl.han.oopg.nukeit.AbstractClasses.PowerUp {
    }
  }
  

  namespace nl.han.oopg.nukeit.AbstractClasses {
    abstract class nl.han.oopg.nukeit.AbstractClasses.Spawner {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.Alien {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.AlienBullet {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.AlienSpawner {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.Asteroid {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.AsteroidSpawner {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.LifePowerUp {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.MinusSign {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.NormalFirePowerUp {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.NukeITPowerUp {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.NukeITWorld {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.PlusSign {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.PowerUpSpawner {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.RapidFirePowerUp {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.Ship {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.ShipBullet {
    }
  }
  

  namespace nl.han.oopg.nukeit.Classes {
    class nl.han.oopg.nukeit.Classes.TripleShotPowerUp {
    }
  }
  

  namespace nl.han.oopg.nukeit.Enums {
    enum FireMode {
    }
  }
  

  namespace nl.han.oopg.nukeit.Enums {
    enum GameState {
    }
  }
  

  namespace nl.han.oopg.nukeit.Enums {
    enum PowerUp {
    }
  }
  

  nl.han.oopg.nukeit.AbstractClasses.Bullet .up.|> nl.han.ica.oopg.collision.ICollidableWithGameObjects
  nl.han.oopg.nukeit.AbstractClasses.Bullet -up-|> nl.han.ica.oopg.objects.SpriteObject
  nl.han.oopg.nukeit.AbstractClasses.Bullet o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.AbstractClasses.Enemy .up.|> nl.han.ica.oopg.collision.ICollidableWithGameObjects
  nl.han.oopg.nukeit.AbstractClasses.Enemy -up-|> nl.han.ica.oopg.objects.SpriteObject
  nl.han.oopg.nukeit.AbstractClasses.PowerUp .up.|> nl.han.ica.oopg.collision.ICollidableWithGameObjects
  nl.han.oopg.nukeit.AbstractClasses.PowerUp -up-|> nl.han.ica.oopg.objects.SpriteObject
  nl.han.oopg.nukeit.AbstractClasses.PowerUp o-- nl.han.oopg.nukeit.Enums.FireMode : fireMode
  nl.han.oopg.nukeit.AbstractClasses.PowerUp o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.AbstractClasses.Spawner -up-|> nl.han.ica.oopg.objects.GameObject
  nl.han.oopg.nukeit.Classes.Alien -up-|> nl.han.oopg.nukeit.AbstractClasses.Enemy
  nl.han.oopg.nukeit.Classes.Alien o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.Classes.AlienBullet -up-|> nl.han.oopg.nukeit.AbstractClasses.Bullet
  nl.han.oopg.nukeit.Classes.AlienBullet o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.Classes.AlienSpawner -up-|> nl.han.oopg.nukeit.AbstractClasses.Spawner
  nl.han.oopg.nukeit.Classes.AlienSpawner o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.Classes.Asteroid -up-|> nl.han.oopg.nukeit.AbstractClasses.Enemy
  nl.han.oopg.nukeit.Classes.Asteroid o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.Classes.AsteroidSpawner -up-|> nl.han.oopg.nukeit.AbstractClasses.Spawner
  nl.han.oopg.nukeit.Classes.AsteroidSpawner o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.Classes.LifePowerUp .up.|> nl.han.ica.oopg.collision.ICollidableWithGameObjects
  nl.han.oopg.nukeit.Classes.LifePowerUp -up-|> nl.han.ica.oopg.objects.SpriteObject
  nl.han.oopg.nukeit.Classes.LifePowerUp o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.Classes.MinusSign -up-|> nl.han.ica.oopg.objects.SpriteObject
  nl.han.oopg.nukeit.Classes.NormalFirePowerUp -up-|> nl.han.oopg.nukeit.AbstractClasses.PowerUp
  nl.han.oopg.nukeit.Classes.NukeITPowerUp -up-|> nl.han.oopg.nukeit.AbstractClasses.PowerUp
  nl.han.oopg.nukeit.Classes.NukeITPowerUp o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.Classes.NukeITWorld -up-|> nl.han.ica.oopg.engine.GameEngine
  nl.han.oopg.nukeit.Classes.NukeITWorld o-- nl.han.oopg.nukeit.Enums.GameState : gameState
  nl.han.oopg.nukeit.Classes.NukeITWorld o-- nl.han.oopg.nukeit.Classes.MinusSign : minusSign
  nl.han.oopg.nukeit.Classes.NukeITWorld o-- nl.han.oopg.nukeit.Classes.PlusSign : plusSign
  nl.han.oopg.nukeit.Classes.NukeITWorld o-- nl.han.oopg.nukeit.Classes.Ship : ship
  nl.han.oopg.nukeit.Classes.PlusSign -up-|> nl.han.ica.oopg.objects.SpriteObject
  nl.han.oopg.nukeit.Classes.PowerUpSpawner -up-|> nl.han.oopg.nukeit.AbstractClasses.Spawner
  nl.han.oopg.nukeit.Classes.PowerUpSpawner o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.Classes.RapidFirePowerUp -up-|> nl.han.oopg.nukeit.AbstractClasses.PowerUp
  nl.han.oopg.nukeit.Classes.Ship .up.|> nl.han.ica.oopg.collision.ICollidableWithGameObjects
  nl.han.oopg.nukeit.Classes.Ship -up-|> nl.han.ica.oopg.objects.SpriteObject
  nl.han.oopg.nukeit.Classes.Ship o-- nl.han.oopg.nukeit.Enums.FireMode : fireMode
  nl.han.oopg.nukeit.Classes.Ship o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.Classes.ShipBullet -up-|> nl.han.oopg.nukeit.AbstractClasses.Bullet
  nl.han.oopg.nukeit.Classes.ShipBullet o-- nl.han.oopg.nukeit.Classes.NukeITWorld : world
  nl.han.oopg.nukeit.Classes.TripleShotPowerUp -up-|> nl.han.oopg.nukeit.AbstractClasses.PowerUp


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
